# lanshare

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile  reload.sh
.cargo/: config.toml
archive/errors/: Cargo.toml
archive/errors/src/: lib.rs
archive/ls-client/src/: lib.rs
archive/ls-daemon/: Cargo.toml
archive/ls-daemon/src/: daemon.rs  error.rs  main.rs  tun.rs
archive/relay-server/: Cargo.toml
archive/relay-server/src/: client.rs  error.rs  lib.rs
config/: instructions.md
config/dbus/: me.piguy.lanshare.conf
config/systemd/: lanshare-daemon.service
crates/coreipc/: Cargo.toml
crates/coreipc/src/: client.rs  error.rs  lib.rs  server.rs  socket.rs  wire.rs
crates/ls-client/: Cargo.toml
crates/ls-client/src/: handler.rs  main.rs
crates/ls-daemon/: Cargo.toml
crates/ls-daemon/src/: lib.rs  main.rs  relay.rs
crates/protoipc/: Cargo.toml
crates/protoipc/src/: lib.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: main.rs
exp/: considerations.md
exp/coreipc/: Cargo.toml
exp/coreipc/src/: client.rs  wire.rs
ls-client/: Cargo.toml
ls-client/src/: lib.rs  main.rs
ls-daemon/: Cargo.toml
ls-daemon/src/: daemon.rs  error.rs  lib.rs  main.rs  tun.rs
ls-daemon/src/platform/: mod.rs
ls-daemon/src/platform/linux/: dbus.rs  mod.rs
quic-abst/: Cargo.toml
quic-abst/src/: error.rs  handler.rs  lib.rs  test_utils.rs
quic-abst/src/client/: mod.rs
quic-abst/src/server/: mod.rs  test.rs
quic-abst/tests/: test.rs
relay-server/: Cargo.toml
relay-server/schemas/: user-table.sql
relay-server/src/: access.rs  action.rs  client.rs  db.rs  error.rs  lib.rs  main.rs  packet.rs  types.rs  wire.rs
relay-server/src/action/: handler.rs  mod.rs  response.rs
