[workspace]
members = ["ls-daemon", "ls-client", "relay-server"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0-dev"
license = "Apache-2.0" # SPDX-Identifier
authors = [
    "piguycs <piguycs@pm.me>"
]

[workspace.dependencies]
s2n-quic = { version = "1" }

tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "sync"] }
tokio-util = { version = "0.7.13", features = ["compat"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

bincode = { version = "1.3.3" }
serde = { version = "1.0.217", features = ["derive"]}

etherparse = "0.16.0"
rand = { version = "0.8.5" }
thiserror = { version = "2.0.9" }

# dependencies from this workspace
relay-server = { path = "relay-server" }

# [target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "*" }
tun = { version = "0.7.10" }
