[workspace]
members = ["ls-daemon", "ls-client", "relay-server"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0-dev"
license = "Apache-2.0" # SPDX-Identifier
authors = [
    "piguycs <piguycs@pm.me>"
]

[workspace.lints.clippy]
new_without_default = "allow"

[workspace.dependencies]
s2n-quic = { version = "1" }

tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "sync"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

bincode = { version = "1.3.3" }
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
sqlite = { version = "0.36.1" }
thiserror = { version = "2.0.9" }

relay-server = { path = "relay-server" }

# [target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.7.10" }
zbus = { version = "5.2.0" }
