[workspace]
members = [
    # old stuff
    #"archive/ls-daemon", "archive/ls-client", "archive/relay-server", "archive/errors",
    "quic-abst"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0-dev"
license = "Apache-2.0" # SPDX-Identifier
authors = [
    "piguycs <piguycs@pm.me>"
]

[workspace.lints.clippy]
new_without_default = "allow"

[workspace.dependencies]
s2n-quic = { version = "1" }

tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "sync"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }

bincode = { version = "1.3.3" }
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = { version = "2.0.9" }
trait-variant = { version = "0.1.2" }
etherparse = { version = "0.17.0" }

#sqlite = { version = "0.36.1" }
rusqlite = { version = "0.33.0", features = ["bundled"] }

# [target.'cfg(target_os = "linux")'.dependencies]
tun = { version = "0.7.10", features = ["async"] }
zbus = { version = "5.2.0", features = ["tokio"] }

# test deps
rstest = { version = "0.24.0" }

# packages in THIS workspace
# errors = { path = "archive/errors" }
# relay-server = { path = "archive/relay-server" }

# quic abstraction (library agnostic api)
quic-abst = { path = "quic-abst" }
