[package]
name = "ls-client"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
s2n-quic.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

rand.workspace = true

relay-server.workspace = true
