[package]
name = "ls-client"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

rand.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
