[package]
name = "ls-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
thiserror.workspace = true

relay-server.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
tun.workspace = true
zbus.workspace = true
