[package]
name = "relay-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

s2n-quic.workspace = true
tokio.workspace = true

bincode.workspace = true
serde.workspace = true
sqlite.workspace = true
