[package]
name = "relay-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

s2n-quic.workspace = true

tokio.workspace = true
tokio-util = { version = "0.7.13", features = ["io", "io-util", "compat"] }

bincode.workspace = true
serde.workspace = true

rand.workspace = true
thiserror.workspace = true

#sqlite.workspace = true
rusqlite.workspace = true
