[package]
name = "ls-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true

s2n-quic.workspace = true

coreipc.workspace = true
relay-server.workspace = true

rand.workspace = true
