[package]
name = "ls-daemon"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true

# etherparse = "0.16.0" # I needed this for debugging
tun.workspace = true # TODO: switch to tokio-tun for linux

coreipc.workspace = true
